tests/compile_fail/declare_scheduler_kernel_builtin_enable_non_array.stderr
error: declare_scheduler!: `kernel_builtin_enable` must be an array literal `[..]`
 --> tests/compile_fail/declare_scheduler_kernel_builtin_enable_non_array.rs:7:5
  |
7 |     kernel_builtin_enable = "echo 1 > /proc/sys/kernel/sched_autogroup_enabled",
  |     ^^^^^^^^^^^^^^^^^^^^^
